# Caspian

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  TODO.md  build.sh  compose.yml  docker-compose.yml  docker-entrypoint.sh  production.yml  pyproject.toml
.github/: CODEOWNERS
api/: __init__.py  __main__.py  app.py  db.py  models.py  worker.py
api/routes/: __init__.py  db.py  scrapers.py
api/scrapers/: __init__.py  base.py  routes.py  spotify.py  youtube.py
backend/backend/: settings.py
caspian/: __main__.py  app.py  db.py  manage.py
caspian/api/routes/: scraping.py
caspian/backend/: asgi.py  settings.py  wsgi.py
caspian/main/: settings.py
caspian/models/: song.py
caspian/schemas/: song.py
caspian/scrapers/: base.py  spotify.py  youtube.py
docker/: .gitignore
docker/volumes/db/init/: 05-app-schema.sql
docker/volumes/downloads/: .gitignore
logs/: .gitignore
