[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["import-error"]

[tool.poetry]
name = "caspian"
version = "0.1.0"
description = "Take control of your music. A fully-featured, self-hosted, open-source music service."
authors = ["Nate <minecraftcrusher100@gmail.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
spotdl = "^3.9.6"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
python-multipart = "^0.0.5"
audio-metadata = "^0.11.1"
pyyaml = "^6.0"
sqlalchemy = "^2.0.16"
celery = "^5.3.1"
psycopg2-binary = "^2.9.6"
storage3 = "^0.5.2"
pyjwt = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
